src/sass/_instance_list.scss
.instance-list {
  .instance-list-header {
    display: flex;
    margin: $spv--x-small 0 $spv--large 0;

    .instance-header-left {
      display: flex;
      flex-grow: 1;

      h1 {
        margin-right: 2rem;
      }

      .search-box {
        max-width: 20rem;
        width: 100%;
      }
    }

    .margin-right {
      margin-right: $sph--large;
    }

    .filter-type {
      min-width: 183px;
    }
  }

  .instance-content {
    margin-top: -$spv--large;
    padding-bottom: 0;
    @media screen and (max-width: $breakpoint-large) {
      margin-top: 0;
    }

    .p-notification--positive,
    .p-notification--negative {
      margin-bottom: $spv--large;
    }
  }

  .u-row:hover,
  .u-row-selected {
    background-color: $colors--light-theme--background-hover;
  }

  .clickable-cell {
    cursor: pointer;
  }

  .instance-actions button {
    margin-bottom: -3px;
  }

  // show actions only on hover if a pointing device is used
  @media screen and (pointer: fine) {
    .instance-actions {
      visibility: hidden;
    }

    .u-row:hover {
      .instance-actions {
        visibility: visible;
      }
    }

    .u-row-selected:hover {
      .instance-actions {
        visibility: hidden;
      }
    }
  }

  .configurable-table-toggle {
    float: right;
    margin-bottom: -3.5rem;
  }

  .instance-table {
    margin-bottom: 0;

    td:last-child {
      padding-bottom: 0;
      padding-right: $sph--large;
    }

    .status-icon {
      margin-left: $spv--x-large;
    }

    .status-header {
      padding-left: 3.33rem;
      pointer-events: none;

      > * {
        pointer-events: all;
      }
    }

    th::before {
      content: "";
      display: inline-block;
      height: 1rem;
    }

    thead,
    tbody {
      display: block;
      overflow-y: auto;
      scrollbar-gutter: stable;
    }

    tbody {
      height: calc(100vh - 146px);
    }

    thead tr,
    tbody tr {
      display: table;
      table-layout: fixed;
      width: 100%;
    }

    .name {
      width: 170px;
    }

    .type {
      width: 130px;
    }

    .description {
      width: 150px;
    }

    .ipv4 {
      width: 150px;
    }

    .ipv6 {
      width: 330px;
    }

    .status {
      width: 160px;
    }

    .snapshots {
      width: 110px;
    }

    .actions {
      width: 210px;
    }
  }

  .p-pagination__items {
    justify-content: flex-end;
  }

  #instance-table-measure {
    max-height: 1px;
    overflow: hidden;
  }

  .p-panel {
    min-height: auto;
  }

  // hide filters on small screens
  @media screen and (max-width: $breakpoint-large) {
    .filter-state,
    .filter-type,
    .search-box {
      display: none;
    }

    .instance-list-header {
      margin-bottom: 0 !important;
    }
  }
  @media screen and (max-width: 1500px) {
    .has-side-panel {
      .filter-state,
      .filter-type,
      .search-box {
        display: none;
      }
    }
  }
}

.l-navigation.is-collapsed + .instance-list {
  @media screen and (min-width: 900px) {
    .filter-state,
    .filter-type,
    .search-box {
      display: flex;
    }
  }
  @media screen and (max-width: 1250px) {
    .has-side-panel {
      .filter-state,
      .filter-type,
      .search-box {
        display: none;
      }
    }
  }
}

.table-column-select-list {
  min-width: 12rem;

  label {
    margin-left: 1rem;
  }
}

